tests/nts_files/bad/out_to_out.nts
.chipsets:
input i1
input i2

.links:
i1:1 i2:1
